# silverhand_arm_firmware

./: .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  Ruka.ioc  TODO.md
App/: main.cpp
Core/Inc/: alert_monitor.h  communications.h  main.h  motor.h  robot_config.h  stm32g4xx_it.h  tmc5160.h  utility.h
Core/Src/: alert_monitor.cpp  as50xx.c  at24_eeprom.c  communications.cpp  fdcan.c  gpio.c  i2c.c  main.c  motor.cpp  spi.c  stm32g4xx_hal_msp.c  stm32g4xx_it.c  tim.c  tmc5160.c  usart.c  utility.c
cmake/: gcc-arm-none-eabi.cmake
cmake/stm32cubemx/: CMakeLists.txt
config/: joint_profile.example.h
docs/: architecture.md  migration_plan.md  ruka_baseline.md
scripts/: flash_openocd.sh  setup_wsl_open_source.sh
